Fix spacing in header

--- a/dapp/src/styles/index.scss
+++ b/dapp/src/styles/index.scss
@@ -123,10 +123,12 @@ header {
   top: 0;
   background-color: white;
   z-index: 1;
-  padding: 0 var(--size-m) 0 0;
+  /* FIXME */
+  padding: 0 42px 0 0;
 }
 
 header section {
+  max-width: 100%;
   padding: 0;
   margin: 0;
 }
